Fix help scout icon alignment

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -35,6 +35,7 @@
   from {
     -webkit-transform: rotate(0deg);
   }
+
   to {
     -webkit-transform: rotate(359deg);
   }
@@ -47,6 +48,7 @@ body {
   overflow-x: hidden;
   user-select: none;
 }
+
 * {
   font-family: 'Roboto', Arial, sans-serif !important;
 }
@@ -58,7 +60,7 @@ button {
 hr {
   padding-top: 0px;
   margin: 0px;
-  border-top:0px;
+  border-top: 0px;
   border-bottom: 1px dotted #cacaca;
 }
 
@@ -129,7 +131,7 @@ hr {
   z-index: 1050;
 }
 
-.loading-gif{
+.loading-gif {
   position: relative;
   top: 110px;
   text-align: center;
@@ -144,7 +146,7 @@ hr {
   text-align: center;
 }
 
-.loading-entries-gif img{
+.loading-entries-gif img {
   content: url("../assets/images/loading.gif");
 }
 
@@ -203,19 +205,23 @@ hr {
   overflow: hidden;
   transition: max-height 0.3s ease-out;
 }
+
 .checked {
   width: 18px;
   height: 18px;
   background: $blue;
   border: none;
+
   img {
     margin-top: 3px;
     margin-left: 2px;
   }
 }
+
 .day-active {
   background: $blue;
-  border: 1px solid #03A9F4;
+  border: 1px solid #03a9f4;
+
   span {
     color: $input-background;
   }
@@ -225,5 +231,4 @@ hr {
   opacity: 0.4;
   cursor: default;
 }
-
 @import "dark-mode";
